menambahkan fitur search query params di endpont get all devices branch
